fixed footer nav on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -663,7 +663,7 @@ padding-bottom: 10px;
   flex-flow: wrap-reverse;
   float: right;
   max-height: 50px;
-  width: 100px;
+  width: 125px;
   padding-right: 0.4em;
 }
 
